# PRIM

./: .gitignore  CMakeLists.txt  README.md  Scene.cpp  bunny2frame.node  bunny2frame.poly  bunny3frame.poly  bunny4frame.poly  bunnyLessVerticesframe.poly  common.h  constraint.cpp  constraint.h  cube86frame.poly  fusingConstraint.cpp  fusingConstraint.h  importToBlender.py  linearSystem.h  main  main.cpp  mainBis  mainBis.cpp  mesh.cpp  mesh.h  mySparseMatrix.cpp  myVec3.cpp  plsworkframe.poly  projectiveConstraint.cpp  render.py  scene.cpp  scene.h  script.sh  vector3.cpp  vector3.h
Meshes/: bunny2.mesh  bunny3.mesh  bunny4.mesh  chocolateBunny.mtl  cube.stl  floor.mtl  plane.mtl  plswork.mesh  tet.mesh  texturedSphere.mtl  tiltedCube.mtl
Output/: frame003.mtl
